--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
           <div class="tile" id="list">
             <div class="row"">
               <div class="col-xs-6">
-                <a href="http://www.google.fr"> <i class="fa fa-list-ul" aria-hidden="true" id="list-symbol"></i> </a>
+                <div class="button">
+                  <a href="http://www.google.fr"> <i class="fa fa-list-ul" aria-hidden="true" id="list-symbol"></i> </a>
+                </div>
               </div>
               <div class="col-xs-6">
                 <p class="text-justified">
@@ -52,7 +54,9 @@
           <div class="tile" id="borrow">
             <div class="row"">
               <div class="col-xs-6">
-                <a href="http://www.google.fr"> <i class="fa fa-list-ul" aria-hidden="true" id="list-symbol"></i> </a>
+                <div class="button">
+                  <a href="http://www.google.fr"> <i class="fa fa-list-ul" aria-hidden="true" id="list-symbol"></i> </a>
+                </div>
               </div>
               <div class="col-xs-6">
                 <p class="text-justified">
@@ -82,11 +86,13 @@
           <div class="tile" id="suscribe">
             <div class="row"">
               <div class="col-xs-6">
-                <a href="http://www.google.fr"> <i class="fa fa-list-ul" aria-hidden="true" id="list-symbol"></i> </a>
+                <div class="button">
+                  <a href="http://www.google.fr"> <i class="fa fa-list-ul" aria-hidden="true" id="list-symbol"></i> </a>
+                </div>
               </div>
               <div class="col-xs-6">
                 <p class="text-justified">
-                  Inscrivez votre club au site !                
+                  Contacter les clubs de l'Alliance                
                 </p>
               </div>
             </div>
@@ -98,7 +104,7 @@
 
   <div id="footer">
     <p>
-      TEST
+      Ceci est un footer
     </p>
   </div>
     
