--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Open+Sans|Montserrat" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- Leave those next 4 lines if you care about users using IE8 -->
     <!--[if lt IE 9]>
@@ -37,12 +37,12 @@
         <div class="col-xs-12 col-sm-6">
           <div class="tile" id="list">
             <div class="row"">
-              <div class="col-xs-6">
+              <div class="col-xs-5">
                 <div class="button">
                   <a href="http://www.google.fr"> <i class="fa fa-list-ul" aria-hidden="true" id="list-symbol"></i> </a>
                 </div>
               </div>
-              <div class="col-xs-6">
+              <div class="col-xs-7">
                 <p class="text-justified">
                   Liste du matériel et des services
                 </p>
@@ -52,18 +52,10 @@
         </div>
         <div class="col-xs-12 col-sm-6">
           <div class="tile" id="borrow">
-            <div class="row"">
-              <div class="col-xs-6">
-                <div class="button">
-                  <a href="http://www.google.fr"> <i class="fa fa-list-ul" aria-hidden="true" id="list-symbol"></i> </a>
-                </div>
-              </div>
-              <div class="col-xs-6">
-                <p class="text-justified">
-                  Faire une demande d'emprunt
-                </p>
-              </div>
-            </div>
+            <p class="text-justified">
+              Besoin de quelque chose ?
+            </p>
+            <a href="http://www.google.fr" class="text-center"> Faire une demande </a>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6">
