--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Alliancervices</title>
-    <link rel="stylesheet" href="style.css">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Open+Sans|Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Open+Sans|Montserrat" rel="stylesheet">    
+    <link rel="stylesheet" href="style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- Leave those next 4 lines if you care about users using IE8 -->
     <!--[if lt IE 9]>
@@ -39,7 +40,7 @@
             <div class="row"">
               <div class="col-xs-5">
                 <div class="button">
-                  <a href="http://www.google.fr"> <i class="fa fa-list-ul" aria-hidden="true" id="list-symbol"></i> </a>
+                  <a href="https://docs.google.com/spreadsheets/d/13xhdDYmG_2OkBTn2dSdFVOTweeUTpM_1PoLPgWdnEy4/edit#gid=0"> <i class="fa fa-list-ul" aria-hidden="true" id="list-icon"></i> </a>
                 </div>
               </div>
               <div class="col-xs-7">
@@ -63,7 +64,7 @@
             <div class="row"">
               <div class="col-xs-6">
                 <div class="button">
-                  <a href="http://www.google.fr"> <i class="fa fa-list-ul" aria-hidden="true" id="list-symbol"></i> </a>
+                  <a href="https://docs.google.com/spreadsheets/d/13xhdDYmG_2OkBTn2dSdFVOTweeUTpM_1PoLPgWdnEy4/edit#gid=0"> <i class="fa fa-list-ul" aria-hidden="true" id="list-icon"></i> </a>
                   </div>
               </div>
               <div class="col-xs-6">
@@ -77,12 +78,14 @@
         <div class="col-xs-12 col-sm-6">
           <div class="tile" id="suscribe">
             <div class="row"">
-              <div class="col-xs-6">
+              <div class="col-xs-5">
                 <div class="button">
-                  <a href="http://www.google.fr"> <i class="fa fa-list-ul" aria-hidden="true" id="list-symbol"></i> </a>
+                  <a href="https://docs.google.com/spreadsheets/d/1v2Gop3agRpKH5Hc3rJMiPNJ3esC1NVNDq6qX3uxu56Y/edit#gid=0">
+                   <i class="fa fa-phone-square" aria-hidden="true" id="phone-icon"></i>
+                  </a>
                 </div>
               </div>
-              <div class="col-xs-6">
+              <div class="col-xs-7">
                 <p class="text-justified">
                   Contacter les clubs de l'Alliance                
                 </p>
