--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="row"">
               <div class="col-xs-6">
                 <div class="button">
-                  <a href="https://docs.google.com/spreadsheets/d/13xhdDYmG_2OkBTn2dSdFVOTweeUTpM_1PoLPgWdnEy4/edit#gid=0"> <i class="fa fa-list-ul" aria-hidden="true" id="list-icon"></i> </a>
+                  <a href="https://docs.google.com/spreadsheets/d/13xhdDYmG_2OkBTn2dSdFVOTweeUTpM_1PoLPgWdnEy4/edit#gid=0"> <i class="fa fa-pencil-square" aria-hidden="true"></i> </a>
                   </div>
               </div>
               <div class="col-xs-6">
@@ -99,7 +99,7 @@
 
   <div id="footer">
     <p>
-      Ceci est un footer
+      Site réalisé par G. NICOLINO, L. LE NINIVIN, et A. RÉVEILLÈRE dans le cadre de la Semaine Blanche de l'Alliance
     </p>
   </div>
     
