--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="row"">
               <div class="col-xs-5">
                 <div class="button">
-                  <a href="https://docs.google.com/spreadsheets/d/13xhdDYmG_2OkBTn2dSdFVOTweeUTpM_1PoLPgWdnEy4/edit#gid=0"> <i class="fa fa-list-ul" aria-hidden="true" id="list-icon"></i> </a>
+                  <a href="https://docs.google.com/spreadsheets/d/1v2Gop3agRpKH5Hc3rJMiPNJ3esC1NVNDq6qX3uxu56Y/edit#gid=0"> <i class="fa fa-list-ul" aria-hidden="true" id="list-icon"></i> </a>
                 </div>
               </div>
               <div class="col-xs-7">
@@ -64,7 +64,7 @@
             <div class="row"">
               <div class="col-xs-6">
                 <div class="button">
-                  <a href="https://docs.google.com/spreadsheets/d/13xhdDYmG_2OkBTn2dSdFVOTweeUTpM_1PoLPgWdnEy4/edit#gid=0"> <i class="fa fa-pencil-square" aria-hidden="true"></i> </a>
+                  <a href="https://docs.google.com/spreadsheets/d/13xhdDYmG_2OkBTn2dSdFVOTweeUTpM_1PoLPgWdnEy4/edit#gid=0"> <i class="fa fa-pencil-square" aria-hidden="true" id="add-icon"></i> </a>
                   </div>
               </div>
               <div class="col-xs-6">
