--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="row"">
               <div class="col-xs-5">
                 <div class="button">
-                  <a href="https://docs.google.com/spreadsheets/d/1v2Gop3agRpKH5Hc3rJMiPNJ3esC1NVNDq6qX3uxu56Y/edit#gid=0"> <i class="fa fa-list-ul" aria-hidden="true" id="list-icon"></i> </a>
+                  <a href="https://docs.google.com/spreadsheets/d/13xhdDYmG_2OkBTn2dSdFVOTweeUTpM_1PoLPgWdnEy4/edit#gid=0" target="_blank"> <i class="fa fa-list-ul" aria-hidden="true" id="list-icon"></i> </a>
                 </div>
               </div>
               <div class="col-xs-7">
@@ -56,7 +56,13 @@
             <p class="text-justified">
               Besoin de quelque chose ?
             </p>
-            <a href="http://www.google.fr" class="text-center"> Faire une demande </a>
+            <!-- <a href="http://www.google.fr" class="text-center"> Faire une demande </a> -->
+            <a class="typeform-share link" href="https://alliancervices.typeform.com/to/mTS5AK" data-mode="popup" style="" target="_blank">
+              Demander du matériel
+            </a>
+              <script>
+                (function() { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://s3-eu-west-1.amazonaws.com/share.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "share.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })() 
+              </script>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6">
@@ -64,7 +70,12 @@
             <div class="row"">
               <div class="col-xs-6">
                 <div class="button">
-                  <a href="https://docs.google.com/spreadsheets/d/13xhdDYmG_2OkBTn2dSdFVOTweeUTpM_1PoLPgWdnEy4/edit#gid=0"> <i class="fa fa-pencil-square" aria-hidden="true" id="add-icon"></i> </a>
+                  <a class="typeform-share link" href="https://alliancervices.typeform.com/to/BUnU7v" data-mode="popup" style="" target="_blank">
+                    <i class="fa fa-pencil-square" aria-hidden="true" id="add-icon"></i>
+                  </a> 
+                  <script> 
+                    (function() { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://s3-eu-west-1.amazonaws.com/share.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "share.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })() 
+                  </script>
                   </div>
               </div>
               <div class="col-xs-6">
@@ -80,7 +91,7 @@
             <div class="row"">
               <div class="col-xs-5">
                 <div class="button">
-                  <a href="https://docs.google.com/spreadsheets/d/1v2Gop3agRpKH5Hc3rJMiPNJ3esC1NVNDq6qX3uxu56Y/edit#gid=0">
+                  <a href="https://docs.google.com/spreadsheets/d/1v2Gop3agRpKH5Hc3rJMiPNJ3esC1NVNDq6qX3uxu56Y/edit#gid=0" target="_blank">
                    <i class="fa fa-phone-square" aria-hidden="true" id="phone-icon"></i>
                   </a>
                 </div>
@@ -91,7 +102,30 @@
                 </p>
               </div>
             </div>
+            <div id="submit">
+              <div class="row"">
+                <div class="col-xs-5">
+                  <div class="button">
+                    <a class="typeform-share link" href="https://alliancervices.typeform.com/to/gNqJrK" data-mode="popup" style="" target="_blank">
+                      <i class="fa fa-info-circle" aria-hidden="true"></i>
+                    </a>
+                    <script>
+                      (function() { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://s3-eu-west-1.amazonaws.com/share.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "share.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })() 
+                    </script>
+                  </div>
+                </div>
+                <div class="col-xs-7">
+                  <p class="text-justified">
+                    Inscrire votre club                
+                  </p>
+                </div>
+              </div>            
+
+              
+
+            </div>
           </div>
+
         </div>
       </div>
     </div>
