--- a/index.html
+++ b/index.html
@@ -53,16 +53,20 @@
         </div>
         <div class="col-xs-12 col-sm-6">
           <div class="tile" id="borrow">
-            <p class="text-justified">
+            <p class="text-justified" id="lama">
               Besoin de quelque chose ?
             </p>
             <!-- <a href="http://www.google.fr" class="text-center"> Faire une demande </a> -->
-            <a class="typeform-share link" href="https://alliancervices.typeform.com/to/mTS5AK" data-mode="popup" style="" target="_blank">
-              Demander du matériel
-            </a>
+            <div id="ask">
+              <a class="typeform-share link" href="https://alliancervices.typeform.com/to/mTS5AK" data-mode="popup" style="" target="_blank">
+                <p class='text-center'>
+                  Demander du matériel
+                </p>
+              </a>
               <script>
                 (function() { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://s3-eu-west-1.amazonaws.com/share.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "share.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })() 
               </script>
+            </div>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6">
@@ -107,7 +111,7 @@
                 <div class="col-xs-5">
                   <div class="button">
                     <a class="typeform-share link" href="https://alliancervices.typeform.com/to/gNqJrK" data-mode="popup" style="" target="_blank">
-                      <i class="fa fa-info-circle" aria-hidden="true"></i>
+                      <i class="fa fa-info-circle" aria-hidden="true" id="inform-icon"></i>
                     </a>
                     <script>
                       (function() { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://s3-eu-west-1.amazonaws.com/share.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "share.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })() 
