--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                   </div>
                 </div>
                 <div class="col-xs-7">
-                  <p class="text-justified">
+                  <h2 class="text-justified">
                     Inscrire votre club                
-                  </p>
+                  </h2>
                 </div>
               </div>            
 
