--- a/index.html
+++ b/index.html
@@ -20,16 +20,25 @@
   </head>
 
   <body>
-  <div id="header">
-    <div id="logos">
-      <img src="images/Alliance.png" alt="Logo Alliance" width="300">
+  <div class="container-full">
+    <div class="row"">
+      <div class="col-xs-12">
+        <div id="header">
+          <div id="logos">
+            <img src="images/Alliance.png" alt="Logo Alliance" width="300">
+          </div>
+          <h1 class="text-center hidden-xs">
+            Alliancervices
+          </h1>
+          <h3 class="text-center visible-xs- hidden-sm hidden-md hidden-lg">
+            Alliancervices
+          </h3>
+          <p class="text-center">
+            Les services et le matériel des clubs et asso de l'Alliance disponibles en un clic !
+          </p>
+        </div>
+      </div>
     </div>
-    <h1 class="text-center">
-      Alliancervices
-    </h1>
-    <p class="text-center">
-      Les services et le matériel des clubs et asso de l'Alliance disponibles en un clic !
-    </p>
   </div>
 
   <div class="container-full">
