--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             <!-- <a href="http://www.google.fr" class="text-center"> Faire une demande </a> -->
             <div id="ask">
               <a class="typeform-share link" href="https://alliancervices.typeform.com/to/mTS5AK" data-mode="popup" style="" target="_blank">
-                <p class='text-center'>
+                <h4 class='text-center'>
                   Demander du matériel
-                </p>
+                </h4>
               </a>
               <script>
                 (function() { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://s3-eu-west-1.amazonaws.com/share.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "share.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })() 
