--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <meta property="og:title" content="Alliancervices - Le meilleur système d'emprunt et de prêt de matériel des clubs et asso de l'Alliance">
+    <meta property="og:image" content="images/Alliance.png">
+    <meta property="og:description" content="Grâce à Alliancervices retrouvez facilement le matériel et les services proposés par les clubs et les assos de l'Alliance, ou ajoutez les votres !">
+
     <title>Alliancervices</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Open+Sans|Montserrat" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Open+Sans|Montserrat|Griffy" rel="stylesheet">    
     <link rel="stylesheet" href="style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- Leave those next 4 lines if you care about users using IE8 -->
@@ -42,8 +46,11 @@
   </div>
 
   <div class="container-full">
+
     <div id="overall">
+
       <div class="row"">
+
         <div class="col-xs-12 col-sm-6">
           <div class="tile" id="list">
             <div class="row"">
@@ -60,6 +67,7 @@
             </div>
           </div>
         </div>
+
         <div class="col-xs-12 col-sm-6">
           <div class="tile" id="borrow">
             <p class="text-justified" id="lama">
@@ -78,6 +86,7 @@
             </div>
           </div>
         </div>
+
         <div class="col-xs-12 col-sm-6">
           <div class="tile" id="add">
             <div class="row"">
@@ -99,6 +108,7 @@
             </div>
           </div>
         </div>
+
         <div class="col-xs-12 col-sm-6">
           <div class="tile" id="suscribe">
             <div class="row"">
@@ -136,6 +146,7 @@
             </div>
           </div>
         </div>
+
       </div>
     </div>
   </div>
@@ -144,7 +155,19 @@
     <p>
       Site réalisé par G. NICOLINO, L. LE NINIVIN, et A. RÉVEILLÈRE dans le cadre de la Semaine Blanche de l'Alliance
     </p>
+    <a href="mailto:alliancervices@gmail.com">
+      Contactez-nous sur alliancervices@gmail.com
+    </a>
+    <h4 class="tooltip">
+      <span class="tooltiptext">alliancervies@gmail.com</span>
+    </h4>
   </div>
+
+  <!-- <div id="lamapalooza">
+    <h6 class='text-center'>
+      Pierre est un <strong><em> énorme </em></strong> caca
+    </h6>
+  </div> -->
     
 
 
